--- a/Likes.html
+++ b/Likes.html
@@ -19,6 +19,6 @@
 <ul> <li>Shrek <a href="https://www.imdb.com/title/tt0126029/">(Bekijk film)</a></li> </ul>
 <img src="https://images-na.ssl-images-amazon.com/images/S/pv-target-images/dca160e75b33af7599c1a9e8846b285d234d84f47705f44059ee3a2278b1ddaa._RI_V_TTW_.jpg" alt="Shrek" width="180">
 <br>
-naar <a href="http://localhost:63342/web%20development/labo%204/opdracht%205/index.html?_ijt=3n67fuuhd06865qdna58houeof&_ij_reload=RELOAD_ON_SAVE">hoofdpagina</a>
+naar <a href="index.html">hoofdpagina</a>
 </body>
 </html>
