--- a/hobby.html
+++ b/hobby.html
@@ -11,6 +11,6 @@
     <li> worstelen bij <a href="https://www.kortrijk.be/vereniging/worstelleeuwen-kortrijk-0">Worstelleeuwen</a>:rustig worstelen met vrienden.</li>
     <li>gamen op <a href="https://www.leagueoflegends.com/fr-fr/">League of Legends</a>:ik hou van gamen. </li>
 </ul>
-naar <a href="http://localhost:63342/web%20development/labo%204/opdracht%205/index.html?_ijt=9hd0lsbaj30oa59n106h6gvcak&_ij_reload=RELOAD_ON_SAVE">hoofdpagina</a>
+naar <a href=index.html>hoofdpagina</a>
 </body>
 </html>
