--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </ul>  <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/139132635/original/ba73986a8a4ca2ac932618ea804837831b077389/put-your-face-on-mike-wazowski.png" alt="wallahi" width="150" height="150">
 
 <h3>Hobby</h3>
-naar <a href="http://localhost:63342/web%20development/labo%204/opdracht%205/hobby.html?_ijt=5b0no5062nq3vlg827k7s32m7a&_ij_reload=RELOAD_ON_SAVE">Hobby</a>
+naar <a href="hobby.html">Hobby</a>
 <h3>Likes</h3>
-naar <a href="http://localhost:63342/web%20development/labo%204/opdracht%205/Likes.html?_ijt=3n67fuuhd06865qdna58houeof&_ij_reload=RELOAD_ON_SAVE"> Likes</a>
+naar <a href="Likes.html"> Likes</a>
 </body>
 </html>
